turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:7: error: not found: value getLength
	var z = getLength(colors)
                ^